--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-%!TEX TS-program = xelatex
+%!TEX TS-program = lualatex
 %!TEX encoding = UTF-8 Unicode
 %
 % Start of file `resume.tex'.
@@ -19,7 +19,6 @@
 %	Info
 %-------------------------------------------------------------------------------
 \name{Robert}{Hameetman}
-\jobtitle{Software Engineer}
 
 \mobile{(847) 331-0391}
 \email{rob@rham.io}
